Issues fixed